fix(*): fix safe-area on iphoneX

--- a/app/pages/root.scss
+++ b/app/pages/root.scss
@@ -1,6 +1,10 @@
 @import "../theme/variables";
 @import "../theme/utilities";
 
+.root {
+  background-color: $bgc;
+}
+
 .pagination {
   .bulletActive {
     opacity: 1;
