--- a/app/theme/main.scss
+++ b/app/theme/main.scss
@@ -13,7 +13,6 @@ html {
 }
 
 body {
-  background-color: $bgc;
   color: $fontColor;
   font-size: $fontM;
   font-family: -apple-system-font, "Helvetica Neue", "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", sans-serif;
